@@ -4,9 +4,9 @@ package coursework.backend.service;
 import coursework.backend.dto.TenderRequestDTO;
 import coursework.backend.dto.TenderResponseDTO;
 import coursework.backend.dto.mapper.TenderMapper;
-import coursework.backend.entity.EmployeePositionInOrganization;
 import coursework.backend.entity.Tender;
-import coursework.backend.entity.TenderStatus;
+import coursework.backend.entity.enums.EmployeePositionInOrganization;
+import coursework.backend.entity.enums.TenderStatus;
 import coursework.backend.exception.ForbiddenException;
 import coursework.backend.exception.NotFoundException;
 import coursework.backend.repository.TenderRepository;
@@ -19,7 +19,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 
 @Service
@@ -30,11 +29,16 @@ public class TenderService {
     private final UserRepository userRepository;
     private final UserService userService;
 
+    private static final NotFoundException notFoundException = new NotFoundException("user not found");
+    private static final ForbiddenException forbiddenException = new ForbiddenException("permission denied");
+
+    @Transactional
     public List<TenderResponseDTO> getTenders(Integer page, Integer pageSize, String sortDirection) {
-        var tenders = tenderRepository.findAll(PageRequest.of(page, pageSize, Sort.by(Sort.Direction.fromString(sortDirection), "id")));
-        return tenders.stream().map(TenderMapper::toDto).collect(Collectors.toList());
+        var tenders = tenderRepository.findAll(PageRequest.of(page, pageSize, Sort.by(Sort.Direction.fromString(sortDirection))));
+        return tenders.stream().map(TenderMapper::toDto).toList();
     }
 
+    @Transactional
     public TenderResponseDTO createTender(TenderRequestDTO request) {
         if (!userRepository.existsByUserAndOrganizationAndHasProvide(userService.getCurrentUserUsername(), request.getOrganizationId(), EmployeePositionInOrganization.HEAD)) {
             throw new ForbiddenException("you can't create tender");
@@ -51,6 +55,7 @@ public class TenderService {
         return TenderMapper.toDto(tenderRepository.save(tender));
     }
 
+    @Transactional
     public List<TenderResponseDTO> getUserTenders() {
         return tenderRepository.getTenderByUsersUsername(userService.getCurrentUserUsername()).stream()
                 .map(TenderMapper::toDto)
@@ -59,33 +64,39 @@ public class TenderService {
 
     }
 
+    @Transactional
     public String getTenderStatus(UUID tenderId) {
         var tender = tenderRepository.getTenderById(tenderId).orElseThrow(
-                () -> new NotFoundException("tender not found")
+                () -> notFoundException
         );
-        if (tender.getTenderStatus() != TenderStatus.PUBLISHED && !userRepository.existsByUserAndOrganization(userService.getCurrentUserUsername(), tender.getOrganizationID())) {
-            throw new ForbiddenException("permission denied");
+        if (tender.getTenderStatus() != TenderStatus.PUBLISHED && userRepository.invertExistsByUserAndOrganization(userService.getCurrentUserUsername(), tender.getOrganizationID())) {
+            throw forbiddenException;
         }
         return tender.getTenderStatus().toString();
     }
 
 
+    @Transactional
     public TenderResponseDTO updateTenderStatus(UUID tenderId, TenderStatus status) {
         Tender tender = tenderRepository.getTenderById(tenderId).orElseThrow(
-                () -> new NotFoundException("tender not found")
+                () -> notFoundException
         );
-        if (!userRepository.existsByUserAndOrganization(userService.getCurrentUserUsername(), tender.getOrganizationID())) {
-            throw new ForbiddenException("permission denied");
+
+        if (userRepository.invertExistsByUserAndOrganization(userService.getCurrentUserUsername(), tender.getOrganizationID())) {
+
+            throw forbiddenException;
         }
+
         tender.setTenderStatus(status);
         return TenderMapper.toDto(tenderRepository.save(tender));
     }
 
+    @Transactional
     public TenderResponseDTO editTender(UUID tenderId, TenderRequestDTO request) {
         var tender = tenderRepository.getTenderById(tenderId).orElseThrow(
-                () -> new NotFoundException("tender not found")
+                () -> notFoundException
         );
-        if (!userRepository.existsByUserAndOrganization(userService.getCurrentUserUsername(), tender.getOrganizationID())) {
+        if (userRepository.invertExistsByUserAndOrganization(userService.getCurrentUserUsername(), tender.getOrganizationID())) {
             throw new ForbiddenException("permission denied");
         }
         Tender newTender = Tender.builder()
